[gd_scene load_steps=2 format=3 uid="uid://f8v8u1qe2xc1"]

[ext_resource type="Script" path="res://order_scene.gd" id="1_5jvkc"]

[node name="order" type="MarginContainer"]
script = ExtResource("1_5jvkc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="order_name" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.776471, 0.776471, 0.776471, 1)
theme_override_colors/font_shadow_color = Color(0.152941, 0.152941, 0.152941, 1)
theme_override_constants/shadow_outline_size = 15
theme_override_font_sizes/font_size = 20
text = "order_name"

[node name="order_ingredients" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/v_separation = 10
columns = 4

[node name="order_time" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true
